@@ -439,9 +439,7 @@ public class DataUtilities {
 
             if (isMatch(a, typeB.getDescriptor(i))) {
                 match++;
-            } else if (isMatch(a, typeB.getDescriptor(a.getLocalName()))) {
-                // match was found in a different position
-            } else {
+            } else if (!isMatch(a, typeB.getDescriptor(a.getLocalName()))) {
                 // cannot find any match for Attribute in typeA
                 return -1;
             }
@@ -559,7 +557,6 @@ public class DataUtilities {
         String id = feature.getID();
         int numAtts = featureType.getAttributeCount();
         Object[] attributes = new Object[numAtts];
-        String xpath;
 
         for (int i = 0; i < numAtts; i++) {
             AttributeDescriptor curAttType = featureType.getDescriptor(i);
@@ -846,16 +843,16 @@ public class DataUtilities {
             return "";
         }
         if (type == Integer.class) {
-            return new Integer(0);
+            return Integer.valueOf(0);
         }
         if (type == Double.class) {
             return new Double(0);
         }
         if (type == Long.class) {
-            return new Long(0);
+            return Long.valueOf(0);
         }
         if (type == Short.class) {
-            return new Short((short) 0);
+            return Short.valueOf((short) 0);
         }
         if (type == Float.class) {
             return new Float(0.0f);
@@ -2453,7 +2450,7 @@ public class DataUtilities {
      * This method changes the query object by simplifying the filter using SimplifyingFilterVisitor
      */
     public static Query simplifyFilter(Query query) {
-        if (query == null) {
+        if (query == null || query == Query.ALL) {
             return query;
         }
         Filter filter = SimplifyingFilterVisitor.simplify(query.getFilter());
